# agent-def-fetcher

./: Cargo.toml  README.md
.github/: build-setup.yml
.github/workflows/: release.yml
crates/agent-defs/: Cargo.toml
crates/agent-defs-cli/: Cargo.toml
crates/agent-defs-cli/src/: config.rs  main.rs
crates/agent-defs-cli/src/commands/: format.rs  install.rs  list.rs  mod.rs  search.rs  show.rs  sync.rs
crates/agent-defs-cli/src/sources/: awesome_subagents.rs  claude_code_templates.rs  generic_gist.rs  generic_repo.rs  mod.rs
crates/agent-defs-github/: Cargo.toml
crates/agent-defs-github/src/: content.rs  gist.rs  lib.rs  repo_source.rs  tarball.rs  tree.rs
crates/agent-defs-github/tests/: fetch_tests.rs  list_tests.rs  tarball_tests.rs
crates/agent-defs-github/tests/fixtures/: content_json.json  content_markdown.json  content_no_frontmatter.json  content_skill.json  tree_response.json  tree_truncated.json
crates/agent-defs-gpui/: Cargo.toml
crates/agent-defs-gpui/icons/: AppIcon.icns  build-icon.sh
crates/agent-defs-gpui/src/: app.rs  grouping.rs  main.rs
crates/agent-defs-store/: Cargo.toml
crates/agent-defs-store/src/: lib.rs  schema.rs  store.rs
crates/agent-defs-store/tests/: store_tests.rs  sync_tests.rs
crates/agent-defs-tui/: Cargo.toml
crates/agent-defs-tui/src/: action.rs  app.rs  grouping.rs  lib.rs
crates/agent-defs-tui/src/render/: detail_pane.rs  install_prompt.rs  kind_filter_overlay.rs  list_pane.rs  mod.rs  search_bar.rs  source_filter_overlay.rs  status_bar.rs  sync_overlay.rs
crates/agent-defs/src/: builder.rs  composite.rs  definition.rs  feedback.rs  frontmatter.rs  install.rs  lib.rs  path.rs  source.rs  sync.rs  test_support.rs
scripts/: build-macos-dmg.sh
