[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
repository = "https://github.com/esmevane/agent-def-fetcher"

[workspace.dependencies]
agent-defs = { path = "crates/agent-defs" }
agent-defs-github = { path = "crates/agent-defs-github" }
agent-defs-store = { path = "crates/agent-defs-store" }
agent-defs-tui = { path = "crates/agent-defs-tui" }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml_ng = "0.9"
thiserror = "2.0"
reqwest = { version = "0.13", features = ["json"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
wiremock = "0.6"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
rusqlite = "0.38"
rusqlite_migration = "2.4"
tar = "0.4"
flate2 = "1.1"
dirs = "6.0"
ratatui = "0.29"
ratatui-explorer = "0.2"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# Host releases on GitHub
hosting = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
