[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2024"
repository = "https://github.com/esmevane/agent-def-fetcher"

[workspace.dependencies]
agent-defs = { path = "crates/agent-defs" }
agent-defs-github = { path = "crates/agent-defs-github" }
agent-defs-store = { path = "crates/agent-defs-store" }
agent-defs-tui = { path = "crates/agent-defs-tui" }
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6.0"
flate2 = "1.1"
futures = "0.3"
ratatui = "0.29"
ratatui-explorer = "0.2"
reqwest = { version = "0.13", features = ["json"] }
rusqlite = "0.38"
rusqlite_migration = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.9"
tar = "0.4"
thiserror = "2.0"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
toml = "0.8"
wiremock = "0.6"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# Where to host releases
hosting = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc"
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
