[package]
name = "agent-defs-cli"
edition.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
agent-defs.workspace = true
agent-defs-github.workspace = true
agent-defs-store.workspace = true
agent-defs-tui.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true

[dev-dependencies]
flate2.workspace = true
tar.workspace = true
wiremock.workspace = true
