[package]
name = "agent-defs-github"
edition.workspace = true
version.workspace = true

[dependencies]
agent-defs.workspace = true
async-trait.workspace = true
base64.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
tar.workspace = true

[dev-dependencies]
flate2.workspace = true
tar.workspace = true
tokio.workspace = true
wiremock.workspace = true
